plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'eclipse'
	id 'org.sonarqube' version '4.4.1.3373'
}

group = 'com.joaopaulo'
version = '0.0.1-SNAPSHOT'
description = 'Projeto de musicas - Core System'

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// 1. Spring Boot Starters (Foco em Web, MongoDB e PostgreSQL)
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // Para PostgreSQL
	implementation 'org.springframework.boot:spring-boot-starter-security' // Para autenticação
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// 2. Banco de dados PostgreSQL
	runtimeOnly 'org.postgresql:postgresql'

	// 3. Lombok (Deve vir antes do MapStruct no annotationProcessor)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 4. MapStruct & Binding (A ordem aqui é o segredo da compilação)
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0' // O mediador
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'    // O gerador

	// 5. JWT (Token de autenticação)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// 6. Utilidades e DevTools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// 7. Validação (necessária para annotations como @Email, @NotBlank, etc.)
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// 8. Testes
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 9. Serialização de Datas
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.bucket4j:bucket4j-core:8.10.1'
}

// 🛠️ Configuração Estratégica para Compilação
tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.compilerArgs = [
			'-parameters',
			'-Amapstruct.defaultComponentModel=spring',
			'-Amapstruct.unmappedTargetPolicy=IGNORE'
	]
}

tasks.named('test') {
	useJUnitPlatform()
}

sonarqube {
	properties {
		property "sonar.projectKey", System.getenv("SONAR_PROJECT_KEY") ?: "musicas-backend"
		property "sonar.host.url", System.getenv("SONAR_HOST_URL") ?: "http://localhost:9000"
		property "sonar.token", System.getenv("SONAR_TOKEN") ?: ""
		property "sonar.gradle.skipCompile", "true"
	}
}
